syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.hugovallada";
option java_outer_classname = "KeyManagerGrpc";

package br.com.zup.hugovallada;

import "google/protobuf/empty.proto";

service KeyManagerGrpcService{
  rpc cadastrarChave(CadastraChavePixGrpcRequest) returns (CadastraChavePixGrpcResponse){}

  rpc deletarChave(DeletarChavePixGrpcRequest) returns (DeletarChavePixGrpcResponse){}
}

message DeletarChavePixGrpcRequest{
  string  idPix = 1;
  string idCliente = 2;
}

message DeletarChavePixGrpcResponse{
  bool sucesso = 1;
}

message CadastraChavePixGrpcRequest {
  string idCliente = 1;
  TipoDeChave tipoDeChave = 2;
  string valorChave = 3;
  TipoDeConta tipoDeConta = 4;
}

message CadastraChavePixGrpcResponse {
  string id = 1;
}

enum TipoDeChave {
  DESCONHECIDO = 0;
  CPF = 1;
  TELEFONE_CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoDeConta {
  DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}